--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -65,9 +65,9 @@ authenticationFailure.AccountLockedException=This account has been locked.
 authenticationFailure.CredentialExpiredException=Your password has expired.
 authenticationFailure.InvalidLoginLocationException=You cannot login from this workstation.
 authenticationFailure.InvalidLoginTimeException=Your account is forbidden to login at this time.
-authenticationFailure.AccountNotFoundException=Invalid credentials.
-authenticationFailure.FailedLoginException=Invalid credentials.
-authenticationFailure.UNKNOWN=Invalid credentials.
+authenticationFailure.AccountNotFoundException=\u60A8\u8F93\u5165\u7684\u8D26\u53F7\u6709\u8BEF.
+authenticationFailure.FailedLoginException=\u60A8\u8F93\u5165\u7684\u5BC6\u7801\u6709\u8BEF.
+authenticationFailure.UNKNOWN=Invalid credentials3.
 
 INVALID_REQUEST_PROXY='pgt' and 'targetService' parameters are both required
 INVALID_TICKET_SPEC=Ticket failed validation specification. Possible errors could include attempting to validate a Proxy Ticket via a Service Ticket validator, or not complying with the renew true request.
